--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<%= provide(:title, "Help page")%>
+<h1>Sample App | Help Blog</h1>
+<p>
+  This is the Help page for the 
+  <a href="https://www.railstutorial.org/">Ruby on rails Tutorials</a>
+  sample application.
+</p>
